--- a/css/styles.css
+++ b/css/styles.css
@@ -825,6 +825,9 @@ button:focus {
 }
 /* === end forum ===*/
 
+@media screen and (min-width: 320px) {
+}
+
 /* ========= media-tablet ========== */
 @media screen and (min-width: 768px) {
   /* ========= header ==========*/
@@ -934,7 +937,10 @@ button:focus {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/Dark-bg-tablet.jpg);
+      image-set(
+        url(../images/Dark-bg-tablet.jpg) 1x,
+        url(../images/Dark-bg-tablet@2x.jpg) 2x
+      );
     max-width: 768px;
     padding: 112px 0;
   }
@@ -1076,8 +1082,9 @@ button:focus {
 @media screen and (min-width: 1158px) {
   /* ========= header ==========*/
   .container {
-    max-width: 1440px;
+    max-width: 1158px;
     margin: 0 auto;
+    padding: 0 15px;
   }
 
   section {
@@ -1192,10 +1199,21 @@ button:focus {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office.jpg);
+      image-set(
+        url(../images/people-office.jpg) 1x,
+        url(../images/people-office@2x.jpg) 2x
+      );
     max-width: 1440px;
     padding: 188px 0;
   }
+  /* другий спосіб зробити backround-image видалити 1х і х2 залишити
+  тільки 1-ший url без image-set і зробити так: 
+  @media (min-resolution: 192dpi) {
+    .main-title {
+       background-image: url(../images/people-office@2x.jpg);
+    }
+  }
+  */
 
   .one-h {
     line-height: 1.07;
