--- a/css/styles.css
+++ b/css/styles.css
@@ -298,15 +298,11 @@ button:focus {
 /* === section 2 === */
 .main-h {
   margin-bottom: 8px;
-  font-weight: 700;
   color: #2e2f42;
   font-size: 36px;
   line-height: 1.11; /* 111.111% */
   letter-spacing: 0.72px;
-  text-transform: capitalize;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .main-p {
@@ -321,7 +317,7 @@ button:focus {
 }
 
 .li-main-list {
-  width: calc((100% - 72px) / 1);
+  width: calc((100% - 0) / 1);
 }
 
 .visually-hidden {
@@ -992,7 +988,6 @@ button:focus {
     font-weight: 700;
     line-height: 1.11; /* 111.111% */
     letter-spacing: 0.72px;
-    text-transform: capitalize;
   }
 
   .ul-main-list {
